--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/taxi_station
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.PostgreSQLDialect
 spring.datasource.username=postgres
 spring.datasource.password=0
+
+spring.liquibase.enabled = true
 
 spring.application.name=Taxi Station
