--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.6.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
