Change ddl-auto from none to validate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.generate-ddl=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/taxi_station
 spring.datasource.driver-class-name=org.postgresql.Driver
