--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -14,7 +14,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.sql.init.data-locations=classpath:data-h2.sql
-
+spring.liquibase.enabled=false
 # Disable in TEST profile
 #eureka.client.enabled=false
 #spring.cloud.discovery.enabled=false
